--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ a {
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	grid-auto-rows: 300px;
 	grid-auto-flow: dense;
+	grid-gap: 0.2rem;
 }
 
 .gallery-item {
