--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,12 @@ body {
 }
 
 img {
+   user-drag: none;  
+   user-select: none;
+   -moz-user-select: none;
+   -webkit-user-drag: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
 	width: 100%;
 	height: auto;
 	display: block;
@@ -203,4 +209,8 @@ a {
 	}
 }
 
-
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
