--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,8 @@ ul {
 	align-items: center;
 	line-height: 2rem;
 	overflow: hidden;
-	margin-bottom: 0.5rem;
-	margin-top: 0.5rem;
+	margin-bottom: 0;
+	margin-top: 0;
 	background-color: #fff;
 	color: #000;
 	font-family: Arial, Helvetica, sans-serif;
@@ -64,13 +64,12 @@ ul {
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 	align-items: center;
-	padding: 0;
-	margin: 0;
 }
 
 .nav-item {
 	flex: 1 0 50%;
 	text-align: center;
+	line-height: 1.5rem;
 }
 
 .logo a,
@@ -147,6 +146,9 @@ a {
 
 @media (min-width: 600px) {
 	.header-nav {
+		justify-content: space-between;
+		margin: 0 1rem;
+		padding: 1rem 0;
 		line-height: 1rem;
 	}
 	.nav-menu {
@@ -194,20 +196,6 @@ a {
 	}
 }
 
-@media (min-width: 900px) {
-	.header-nav {
-		justify-content: space-between;
-		margin: 1rem auto;
-		padding: 1rem 0;
-		line-height: 1rem;
-	}
-	.nav-item {
-		white-space: no wrap;
-	}
-	.logo {
-		margin: 0 0 0 0.3rem;
-	}
-}
 
 .prevent-select {
   -webkit-user-select: none; /* Safari */
