--- a/css/ccstyles.css
+++ b/css/ccstyles.css
@@ -11,7 +11,7 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	height: 100%;
-	max-width: 1400px;
+	max-width: 800px;
 }
 
 *, 
@@ -103,7 +103,7 @@ a {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-	grid-auto-rows: 300px;
+	grid-auto-rows: 600px;
 	grid-auto-flow: dense;
 	grid-gap: 0.2rem;
 }
@@ -157,6 +157,10 @@ a {
 	.nav-item {
 		flex: 1 0 10%;
 	}
+	.card {
+		width: 50%;
+		height: 50%;
+	}
 	/* Grid column and row spans for wider screens */
 	.w-1 {
 		grid-column: span 1;
@@ -202,3 +206,9 @@ a {
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 }
+
+
+
+
+
+
