--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ ul {
 	background-color: #fff;
 	color: #000;
 	font-family: Arial, Helvetica, sans-serif;
-	width: 95%;
+	width: 97%;
 }
 	
 .logo,
@@ -96,7 +96,8 @@ a {
 /* Begin Grid */
 
 .gallery-page {
-	padding: 0 0 10rem 0;
+	margin: 0 auto;
+	padding: 0;
 }
 
 .gallery-span {
